# CICT

./: .gitignore  README.md  active-record.py  all_in_one.py  bag-record.py  camera_info.py  ff_collect_pm_data.py  get_nav.py  local_planner.py  models.py  passive-record.py  read_gps.py  record.py  remote_ctrl.py  run.py  run_imitation.py  sensor_manager.py  test.py  test_gps.py  test_imitation.py  test_run.py  utils.py
GPS/: singleReciever.py
IMU/: __init__.py  mtdevice.py  mtnode.py
LiDAR/: lidar.py  open_port.sh  requirements.txt
ROS/: .gitignore  build.sh  rename.py  run_camera.sh  run_collect.sh  run_lidar.sh
ROS/src/controller/: CMakeLists.txt  package.xml
ROS/src/gps/: CMakeLists.txt  package.xml
ROS/src/imu/: CMakeLists.txt  package.xml
ROS/src/tools/: save_img.py
camera/: CMakeLists.txt  build.sh  run.py
camera/src/: main.cpp
camera/src/util/: mat_warper.cpp
controller/: __init__.py  controller.py  ctrl_box_visualizer.py  passive_xbox.py  readme.md  test.py  xbox.py
controller2/: controller.py  xbox.py
device/: __init__.py  sensor_manager.py
device/camera/: CMakeLists.txt  build.sh
device/controller/: passive_xbox.py  xbox.py
device/gps/: __init__.py  gps.py
device/imu/: __init__.py  mtdef.py  mtdevice.py  mtnode.py
device/lidar/: __init__.py  lidar.py
gps/: __init__.py  gps.py
learning/: __init__.py  costmap_dataset.py  datasets.py  imitation_model.py  models.py  path_model.py
scripts/: .gitignore  active-record.py  asynchronous_control_carla.py  asynchronous_control_carla_img.py  bag-record.py  calibration.py  collect_sim_data-2.py  collect_sim_data.py  ff_collect_ipm_data.py  ff_collect_pm_data.py  install.sh  manual_control.py  manual_control_steeringwheel.py  requirements.txt  spawn_npc.py  test.py  test_carla.py  test_imitation.py  test_ipm.py  test_map.py  test_sim.py  test_sim_agent.py  train_cGAN.py  train_path.py  train_path_img.py  visualizer.py  wheel_config.ini
scripts/carla/: asynchronous_control_carla.py  collect_sim_data-2.py  collect_sim_data.py  eval.py  run_video.py  test.py  test_bm.py  test_bm2.py  train_GAN.py  train_GAN2.py  train_cGAN.py  train_gmm.py  train_path.py  train_vae.py  tttt.py  video.py
scripts/carla/Town01/: navigation_with_dynamic_obstacles.csv  one_turn.csv  straight.csv
scripts/carla/Town02/: navigation_with_dynamic_obstacles.csv  one_turn.csv  straight.csv
scripts/dataset/: ablation_study.py  train_CIL.py  train_cnnfc.py  train_cnnfc_img.py  train_cnnlstm.py  train_cnnlstm_img.py  train_lstmgmm.py  train_mdn.py  train_path.py  train_path2.py  train_vaelstm.py
scripts/ff/: bezier_curve.py  capac_controller.py  carla_sensor.py  collect_ipm.py  collect_pm.py
scripts/ff/camera/: coordinate_transformation.py  parameters.py
scripts/ff/system/: __init__.py  (+1 more)
scripts/ff2/: capac_controller (copy).py  capac_controller.py  carla_sensor.py  collect_ipm.py  collect_pm.py  collect_pm_real_time.py
scripts/generate_data/: generate_image_semantic.py  manaul_collect_sim_data.py  manual_control_steeringwheel.py
scripts/real/: calc_path_len.py  cat_img.py  draw_path.py  get_permission.sh  passive-record.py  run.py  run_imitation.py  test.py
scripts/test/: run_carla.py  spawn_npc.py  test_carla_data.py  test_map.py  test_sim.py
simulator/: __init__.py  official_code.py  sensor_manager.py  xbox.py
test/: param.md
test/CAN/: test.py
test/GPS/: get_nav.py  get_nav2.py  make_video.py  test_draw.py  test_read.py
test/IMU/: ReadMe.md  mtdevice.py  mtnode.py
test/camera/: app.py  encode.cpp  get.py  show_opencv_pic.py
test/camera/pybind/: CMakeLists.txt  example.cpp  main.cpp  mat_warper.h  test.py
test/camera/test_sdk/: CMakeLists.txt
test/camera/test_sdk/output/: get_image
test/camera/test_sdk/src/: get_image.cc
test/camera_lidar/: test.py
test/ctrl/: lqr_steer_control.py
test/path_plot/: camera_info.py  gps_reader.py  icp_reader.py  make_video.py  pd_filter.py  run.py
test/remote/: listener.py  talker.py
test/velodyne-driver/: CMakeLists.txt  build.sh  test.py
test/velodyne-driver/src/: velodyne.cpp
utils/: __init__.py  camera_info.py  camera_info_sim.py  local_planner.py  local_planner_sim.py  manual_gps.py  navigator.py  navigator_sim.py
video/: README.md
(+49 files in other folders)
